src/main/kubernetes/backend/backend-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
    group: plessme
  name: plessme-backend-dpl
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      group: plessme
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
        group: plessme
    spec:
      containers:
      - image: jcr.bongladesch.com/docker-dev/plessme/backend
        imagePullPolicy: Always
        name: plessme
        ports:
          - name: http
            protocol: TCP
            containerPort: 8080
          - name: debug
            protocol: TCP
            containerPort: 5005
        resources:
          limits:
            cpu: "2"
            memory: 2048Mi
          requests:
            cpu: "0.1"
            memory: 512Mi
