src/main/kubernetes/backend/backend-debug-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: plessme-backend-debug-svc
  namespace: dev
spec:
  type: NodePort
  selector:
    app: backend
    group: plessme
  ports:
    - name: debug
      protocol: TCP
      port: 5005
      targetPort: 5005
      nodePort: 30000
