src/main/kubernetes/backend/backend-http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: plessme-backend-http-svc
  namespace: dev
spec:
  selector:
    app: backend
    group: plessme
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
